crates/lang/macro/tests/ui/trait_def/fail/message_selector_overlap.rs
use ink_lang as ink;

#[ink::trait_definition]
pub trait OverlappingSelectors {
    #[ink(message, selector = 1)]
    fn selector1(&self);
    #[ink(message, selector = 1)]
    fn selector2(&self);
}

fn main() {}
